src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");

/* You can override the default Infima variables here. */
:root {
  --ifm-footer-background-color: #f2f2f2;
  --ifm-color-primary: #005eb8;
  --ifm-color-primary-dark: #0055a6;
  --ifm-color-primary-darker: #00509c;
  --ifm-color-primary-darkest: #004281;
  --ifm-color-primary-light: #0067ca;
  --ifm-color-primary-lighter: #006cd4;
  --ifm-color-primary-lightest: #0075e4;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --ifm-font-family-base: "Arial", sans-serif;
  --ifm-font-family-monospace: "IBM Plex Mono", "Courier New", monospace;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #0099ff;
  --ifm-color-primary-dark: #008ae6;
  --ifm-color-primary-darker: #0088e3;
  --ifm-color-primary-darkest: #0085de;
  --ifm-color-primary-light: #1aa3ff;
  --ifm-color-primary-lighter: #26a8ff;
  --ifm-color-primary-lightest: #4db8ff;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
  --ifm-footer-background-color: #0d0d0d;
}

/* Sidebar Method labels */
.api-method > .menu__link {
  align-items: center;
  justify-content: start;
}

.api-method > .menu__link::before {
  width: 50px;
  height: 20px;
  font-size: 12px;
  line-height: 20px;
  text-transform: uppercase;
  font-weight: 600;
  border-radius: 0.25rem;
  border: 1px solid;
  margin-right: var(--ifm-spacing-horizontal);
  text-align: center;
  flex-shrink: 0;
  border-color: transparent;
  color: white;
}

.get > .menu__link::before {
  content: "get";
  background-color: rgb(47, 129, 50);
}

.put > .menu__link::before {
  content: "put";
  background-color: rgb(149, 80, 124);
}

.post > .menu__link::before {
  content: "post";
  background-color: rgb(24, 111, 175);
}

.delete > .menu__link::before {
  content: "del";
  background-color: rgb(204, 51, 51);
}

.patch > .menu__link::before {
  content: "patch";
  background-color: rgb(191, 88, 29);
}

/* GET */
.badge--primary {
  background-color: rgb(47, 129, 50);
  border-color: rgb(47, 129, 50);
  color: white;
}

/* PUT */
.badge--info {
  background-color: rgb(149, 80, 124);
  border-color: rgb(149, 80, 124);
  color: white;
}

/* POST */
.badge--success {
  background-color: rgb(24, 111, 175);
  border-color: rgb(24, 111, 175);
  color: white;
}

/* DEL */
.badge--danger {
  background-color: rgb(204, 51, 51);
  border-color: rgb(204, 51, 51);
  color: white;
}

/* PATCH */
.badge--warning {
  background-color: rgb(191, 88, 29);
  border-color: rgb(191, 88, 29);
  color: white;
}

